--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,6 @@
     <script>
         $(function() {
             $('#banner').slider();
-
         })
     </script>
 </head>
@@ -75,10 +74,10 @@
             <a href="#">TCT</a>
         </div>
         <div class="text">
+            <div class="shou">
+                <a href="">首页</a>
+            </div>
             <ul>
-                <li>
-                    <a href="">首页</a>
-                </li>
                 <li>
                     <a href="">电视</a>
                 </li>
@@ -97,6 +96,45 @@
                 <li>
                     <a href="">智能硬件</a>
                 </li>
+                <div class="erbar">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
+                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
+                                <div class="jia">3599.00元</div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
+                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
+                                <div class="jia">3599.00元</div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
+                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
+                                <div class="jia">3599.00元</div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
+                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
+                                <div class="jia">3599.00元</div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
+                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
+                                <div class="jia">3599.00元</div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </ul>
         </div>
         <div class="text1">
