--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,9 +10,50 @@
     <link rel="stylesheet" href="../less/reset.css">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../js/lunbao.js"></script>
+    <script src="../js/headerbanner.js"></script>
     <script>
         $(function() {
             $('#banner').slider();
+            $.ajax({
+                type: "get",
+                url: "../../php/miandian.php",
+                dataType: "json",
+                success: function(response) {
+                    for (var i = 0; i < 6; i++) {
+                        var miandian = `<li>
+                        <a href="">
+                            <img src="${response[i].img}" alt="${response[i].title}">
+                            <span class="span3">${response[i].title}</span>
+                            <span class="span4">${response[i].jiesshao}</span>
+                            <span class="span5">${response[i].jiange} 元</span>
+                        </a>
+                    </li>`;
+                        $('#tv .mian-img .mian-imgright ul').html(function(i, old) {
+                            return old + miandian;
+                        })
+                    }
+                }
+            });
+            $.ajax({
+                type: "get",
+                url: "../../php/miankong.php",
+                dataType: "json",
+                success: function(response) {
+                    for (var i = 0; i < 6; i++) {
+                        var miankong = `<li>
+                        <a href="">
+                            <img src="${response[i].img}" alt="${response[i].title}">
+                            <span class="span3">${response[i].title}</span>
+                            <span class="span4">${response[i].jiesshao}</span>
+                            <span class="span5">${response[i].jiange} 元</span>
+                        </a>
+                    </li>`;
+                        $('#air-condition .mian-img .mian-imgright ul').html(function(i, old) {
+                            return old + miankong;
+                        })
+                    }
+                }
+            });
         })
     </script>
 </head>
@@ -98,41 +139,6 @@
                 </li>
                 <div class="erbar">
                     <ul>
-                        <li>
-                            <a href="">
-                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
-                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
-                                <div class="jia">3599.00元</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
-                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
-                                <div class="jia">3599.00元</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
-                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
-                                <div class="jia">3599.00元</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
-                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
-                                <div class="jia">3599.00元</div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                <img src="../img/CkgbllztLiOAcntyAACJypkgau8106.jpg" alt="">
-                                <div class="wen">55T6 55英寸全场景AI人工智能电视</div>
-                                <div class="jia">3599.00元</div>
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </ul>
@@ -194,6 +200,9 @@
         <div class="an-right">&gt;</div>
         <div class="left">
             <ul>
+                <div class="ernav">
+                    <ul></ul>
+                </div>
                 <li>
                     <a href="">热销电视</a>
                     <i>&gt;</i>
@@ -223,6 +232,133 @@
                     <i>&gt;</i>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div id="tu">
+        <img src="../img/CkgbllznxkeAA3JmAABoz6VbpDw623.jpg" alt="">
+        <img src="../img/CkgbllznxkeAA3JmAABoz6VbpDw623.jpg" alt="">
+        <img src="../img/CkgbllznxkeAA3JmAABoz6VbpDw623.jpg" alt="">
+    </div>
+    <div id="tv">
+        <div class="mian-text">电视</div>
+        <div class="mian-img">
+            <div class="mian-imgleft">
+                <a href="">
+                    <img src="../img/CkgbllznsiqAD0i9AABmgBKPsAk502.jpg" alt="">
+                </a>
+            </div>
+            <div class="mian-imgright">
+                <ul>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="air-condition">
+        <div class="mian-text">空调</div>
+        <div class="mian-img">
+            <div class="mian-imgleft">
+                <a href="">
+                    <img src="../img/CkgbllznwQiAW8RLAABDB-J3w2A466.jpg" alt="">
+                </a>
+            </div>
+            <div class="mian-imgright">
+                <ul>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="refrigerator">
+        <div class="mian-text">冰箱</div>
+        <div class="mian-img">
+            <div class="mian-imgleft">
+                <a href="">
+                    <img src="../img/CkgbllznsiqAD0i9AABmgBKPsAk502.jpg" alt="">
+                </a>
+            </div>
+            <div class="mian-imgright">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <span class="span3">65Q2 65英寸旗舰新剧院电视</span>
+                            <span class="span4">到手价5299元 全网保价</span>
+                            <span class="span5">5499.00 元</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="washer">
+        <div class="mian-text">洗衣机</div>
+        <div class="mian-img">
+            <div class="mian-imgleft">
+                <a href="">
+                    <img src="../img/CkgbllznsiqAD0i9AABmgBKPsAk502.jpg" alt="">
+                </a>
+            </div>
+            <div class="mian-imgright">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <span class="span3">65Q2 65英寸旗舰新剧院电视</span>
+                            <span class="span4">到手价5299元 全网保价</span>
+                            <span class="span5">5499.00 元</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
