--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,24 +8,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="../less/index.css">
     <link rel="stylesheet" href="../less/reset.css">
+    <link rel="stylesheet" href="../less/header.css">
+    <script src="../js/cookie.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../js/lunbao.js"></script>
     <script src="../js/headerbanner.js"></script>
     <script>
         $(function() {
+            var usename = cookie.get("username");
+            var f = cookie.get("isLogin");
+            if (f) {
+                $('#deng').html("欢迎您：" + usename);
+                $('#deng').attr('href', "#")
+                var e = ` <a href="index.html" id="tui">退出</a>`
+                $('#deng1').html(function(i, old) {
+                    return old + e;
+                })
+            }
+            $('#deng1').on('click', '#tui', function() {
+                cookie.remove('isLogin');
+                $('#deng').attr('href', "login.html")
+            })
             $('#banner').slider();
             $.ajax({
                 type: "get",
                 url: "../../php/miandian.php",
                 dataType: "json",
                 success: function(response) {
+                    var tv = "tv"
                     for (var i = 0; i < 6; i++) {
                         var miandian = `<li>
-                        <a href="">
+                        <a href="pre.html?id=${response[i].id}&name=${tv}">
                             <img src="${response[i].img}" alt="${response[i].title}">
                             <span class="span3">${response[i].title}</span>
                             <span class="span4">${response[i].jiesshao}</span>
-                            <span class="span5">${response[i].jiange} 元</span>
+                            <span class="span5">${response[i].jiange}.00元</span>
                         </a>
                     </li>`;
                         $('#tv .mian-img .mian-imgright ul').html(function(i, old) {
@@ -39,9 +56,10 @@
                 url: "../../php/miankong.php",
                 dataType: "json",
                 success: function(response) {
+                    var kong = "kong"
                     for (var i = 0; i < 6; i++) {
                         var miankong = `<li>
-                        <a href="">
+                        <a href="pre.html?id=${response[i].id}&name=${kong}">
                             <img src="${response[i].img}" alt="${response[i].title}">
                             <span class="span3">${response[i].title}</span>
                             <span class="span4">${response[i].jiesshao}</span>
@@ -101,11 +119,11 @@
                 </li>
                 <i></i>
                 <li>
-                    <a href="">注册</a>
+                    <a href="reg.html">注册</a>
                 </li>
                 <i></i>
-                <li>
-                    <a href="">登录</a>
+                <li id="deng1">
+                    <a href="login.html" id="deng">登录</a>
                 </li>
             </ul>
         </div>
