--- a/src/html/login.html
+++ b/src/html/login.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" media="screen" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
@@ -21,14 +22,14 @@
             <div class="login-center clearfix">
                 <div class="login-center-img"><img src="../img/name.png" /></div>
                 <div class="login-center-input">
-                    <input type="text" name="username" value="" placeholder="请输入您的用户名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的用户名'" />
+                    <input type="text" name="username" id="username" placeholder="请输入您的用户名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的用户名'" />
                     <div class="login-center-input-text">用户名</div>
                 </div>
             </div>
             <div class="login-center clearfix">
                 <div class="login-center-img"><img src="../img/password.png" /></div>
                 <div class="login-center-input">
-                    <input type="password" name="password" value="" placeholder="请输入您的密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的密码'" />
+                    <input type="password" name="password" id="password" placeholder="请输入您的密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的密码'" />
                     <div class="login-center-input-text">密码</div>
                 </div>
             </div>
@@ -38,17 +39,8 @@
         </div>
         <div class="sk-rotating-plane"></div>
     </div>
-    <script src="../js/jquery.js"></script>
     <script src="../js/cookie.js"></script>
-    <script>
-        $(function() {
-                $('.login-button').on('click', function() {
-
-                })
-            })
-            // cookie.set('isLogin', 'true', 1);
-            // cookie.set('username', '$usename', 1);
-    </script>
+    <script src="../js/login.js"></script>
 </body>
 
 </html>
