--- a/src/html/pre.html
+++ b/src/html/pre.html
@@ -9,9 +9,67 @@
     <link rel="stylesheet" href="../less/header.css">
     <link rel="stylesheet" href="../less/pre.css">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../js/cookie.js"></script>
     <script src="../js/headerbanner.js"></script>
     <script src="../js/pre.js"></script>
     <title>Document</title>
+    <script>
+        $(function() {
+            var usename = cookie.get("username");
+            var f = cookie.get("isLogin");
+            if (f) {
+                $('#deng').html("欢迎您：" + usename);
+                $('#deng').attr('href', "javascript:;")
+                var e = ` <a href="index.html" id="tui">退出</a>`
+                $('#deng1').html(function(i, old) {
+                    return old + e;
+                })
+            }
+            $('#deng1').on('click', '#tui', function() {
+                cookie.remove('isLogin');
+                $('#deng').attr('href', "login.html")
+            })
+            var shop2 = [];
+            $('#main .text h3').on('click', function() {
+                if (f) {
+                    var se = location.search.split('=');
+                    var id = se[1].split('&')[0];
+                    var name = se[2];
+                    addShopCar(id, name, $('#main .text input').val())
+
+                } else {
+                    alert('请登录');
+                }
+            })
+
+            function addShopCar(id, name, num) {
+                var shop = cookie.get('shop'); //从cookie获取shop
+                var product = {
+                    "id": id,
+                    "name": name,
+                    "num": num
+                };
+
+                if (shop) {
+                    shop = JSON.parse(shop); // cookie中如果有数据 这个数据是json字符串 转成对象
+
+                    if (shop.some(elm => elm.id == id)) {
+                        shop.forEach(function(elm, i) {
+                            elm.id == id ? elm.num = num : null;
+                        });
+                    } else {
+                        shop.push(product);
+                    }
+                    cookie.set('shop', JSON.stringify(shop), 1);
+                } else {
+                    shop = [];
+                    shop.push(product);
+                    cookie.set('shop', JSON.stringify(shop), 1);
+                }
+
+            }
+        })
+    </script>
 </head>
 
 <body>
@@ -52,7 +110,7 @@
                 </li>
                 <i></i>
                 <li>
-                    <a href="">购物车</a>
+                    <a href="guo.html">购物车</a>
                     <span>(0)</span>
                 </li>
                 <i></i>
@@ -60,8 +118,8 @@
                     <a href="">注册</a>
                 </li>
                 <i></i>
-                <li>
-                    <a href="">登录</a>
+                <li id="deng1">
+                    <a href="login.html" id="deng">登录</a>
                 </li>
             </ul>
         </div>
@@ -141,7 +199,7 @@
             <h2>可获取积分：400</h2>
             <h6></h6>
             <span class="span2">促销价：</span>
-            <span class="span1">2000.00</span>
+            <span class="span1"></span>
             <ul>
                 <li>满6500减200</li>
                 <li>满3500减100</li>
