--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,69 +15,7 @@
     <!--多表的  -->
     <!-- <script src="../js/headerbanner.js"></script>-->
     <script src="../js/header.js"></script>
-
-    <script>
-        $(function() {
-            var usename = cookie.get("username");
-            var f = cookie.get("isLogin");
-            console.log($('#deng'));
-            if (f) {
-                $('#deng').html("欢迎您：" + usename);
-                $('#deng').attr('href', "javascript:;")
-                var e = ` <a href="index.html" id="tui">退出</a>`
-                $('#deng1').html(function(i, old) {
-                    return old + e;
-                })
-            }
-            $('#deng1').on('click', '#tui', function() {
-                cookie.remove('isLogin');
-                $('#deng').attr('href', "login.html")
-            })
-            $('#banner').slider();
-            $.ajax({
-                type: "get",
-                url: "../../php/miandian.php",
-                dataType: "json",
-                success: function(response) {
-                    var tv = "tv"
-                    for (var i = 0; i < 6; i++) {
-                        var miandian = `<li>
-                        <a href="pre.html?id=${response[i].id}&name=${tv}">
-                            <img src="${response[i].img}" alt="${response[i].title}">
-                            <span class="span3">${response[i].title}</span>
-                            <span class="span4">${response[i].jiesshao}</span>
-                            <span class="span5">${response[i].jiange}.00元</span>
-                        </a>
-                    </li>`;
-                        $('#tv .mian-img .mian-imgright ul').html(function(i, old) {
-                            return old + miandian;
-                        })
-                    }
-                }
-            });
-            $.ajax({
-                type: "get",
-                url: "../../php/miankong.php",
-                dataType: "json",
-                success: function(response) {
-                    var kong = "kong"
-                    for (var i = 0; i < 6; i++) {
-                        var miankong = `<li>
-                        <a href="pre.html?id=${response[i].id}&name=${kong}">
-                            <img src="${response[i].img}" alt="${response[i].title}">
-                            <span class="span3">${response[i].title}</span>
-                            <span class="span4">${response[i].jiesshao}</span>
-                            <span class="span5">${response[i].jiange} 元</span>
-                        </a>
-                    </li>`;
-                        $('#air-condition .mian-img .mian-imgright ul').html(function(i, old) {
-                            return old + miankong;
-                        })
-                    }
-                }
-            });
-        })
-    </script>
+    <script src="../js/index.js"></script>
 </head>
 
 <body>
@@ -309,27 +247,27 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -356,33 +294,68 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
+                            <img data-lazy-src="../img/CkgbllzlFKWATMJKAACXptFjYIk099.jpg" alt="">
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
+    <div id="bootm">
+        <ul>
+            <li><a href="">关于TCL</a></li>
+            <li><a href="">投资者关系</a></li>
+            <li><a href="">社会责任</a></li>
+            <li><a href="">新闻中心</a></li>
+            <li><a href="">人才招聘</a></li>
+            <li><a href="">成员网站</a></li>
+        </ul>
+        <p>©2010-2018 TCL CORPORATION All Rights Reserved. TCL集团股份有限公司版权所有 粤ICP备05040863号</p>
+        <h6>粤网公安备案44133002100088号</h6>
+        <div class="img">
+            <img src="../img/gdgs.png" alt="" class="img1">
+            <img width="112px" src="../img/credibility.png" alt="">
+        </div>
+        <div class="wei">
+            <img src="../img/wechat.jpg" alt="">
+        </div>
+    </div>
+    <script src="../js/EasyLazyload.min.js"></script>
+    <script>
+        lazyLoadInit({
+            coverColor: "white",
+            coverDiv: "",
+            offsetBottom: 0,
+            offsetTopm: 0,
+            showTime: 1100,
+            onLoadBackEnd: function(i, e) {
+                console.log("onLoadBackEnd:" + i);
+            },
+            onLoadBackStart: function(i, e) {
+                console.log("onLoadBackStart:" + i);
+            }
+        });
+    </script>
 </body>
 
 </html>
